--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@vercel/analytics": "^1.5.0",
+    "ai": "^5.0.66",
     "convex": "^1.27.0",
     "next": "15.2.3",
     "react": "^19.0.0",
@@ -40,6 +43,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "msw": "^2.11.4",
+    "node-mocks-http": "^1.17.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
